@@ -1,5 +1,8 @@
 2016-05-03  Jakub Jelinek  <jakub@redhat.com>
 
+	PR tree-optimization/70916
+	* gcc.c-torture/compile/pr70916.c: New test.
+
 	PR target/49244
 	* gcc.target/i386/pr49244-1.c: New test.
 	* gcc.target/i386/pr49244-2.c: New test.
