@@ -1,5 +1,9 @@
 2016-05-03  Jakub Jelinek  <jakub@redhat.com>
 
+	PR tree-optimization/70916
+	* tree-vect-patterns.c (vect_recog_mask_conversion_pattern): Give up
+	if COND_EXPR rhs1 is neither SSA_NAME nor COMPARISON_CLASS_P.
+
 	PR target/49244
 	* tree-ssa-ccp.c: Include stor-layout.h and optabs-query.h.
 	(optimize_atomic_bit_test_and): New function.
